# cinder-cmake-template

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  build.sh  run.sh  update.sh  version.h.in
CMake/: CreateImportTargetHelpers.cmake  FindCinder.cmake  FindPackageHandleStandardArgs.cmake  FindTBB.cmake  Version.cmake
blocks/CMake/: cinder-kinect.cmake
docs/: Concept.md
src/: CMakeLists.txt  app.cpp
support/: cinder-latest
support/cinder_0.8.6_mac/boost/: README.md
support/cinder_0.8.6_mac/boost/boost/intrusive/detail/: has_member_function_callable_with.hpp
support/xcode/: generate_schemes.sh
